[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.0"
rust_decimal = "1.32"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["abigen"] }
hex = "0.4.3"
regex = "1"
ethereum-types = "0.14.1"
rlp = "0.5.2"
secp256k1 = "0.27.0"
sha3 = "0.10.8"
anyhow = "1.0"
futures = "0.3"
lazy_static = "1.4"
num-bigint = "0.4"
num-traits = "0.2"
ethabi = "18.0.0"
tiny-keccak = "2.0.2"